docs/7.52/md/abencorresponding_abexas.md
---
title: "Continue"
description: |
  !Example(exa.gif 'Example') MOVE-CORRESPONDING for Structures(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmove_corresponding_struc_abexa.htm) !Example(exa.gif 'Example') MOVE-CORRESPONDING for Internal Tables(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenm
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_abexas.htm"
abapFile: "abencorresponding_abexas.htm"
keywords: ["do", "if", "data", "internal-table", "abencorresponding", "abexas"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Assignments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvalue_assignments.htm) →  [Assigning Structure Components](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding.htm) → 

Assigning Components: Examples

Continue
![Example](exa.gif "Example") [MOVE-CORRESPONDING for Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmove_corresponding_struc_abexa.htm)
![Example](exa.gif "Example") [MOVE-CORRESPONDING for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmove_corresponding_abexa.htm)
![Example](exa.gif "Example") [Component Operator for Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_struct_abexa.htm)
![Example](exa.gif "Example") [Component Operator for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_itab_abexa.htm)
![Example](exa.gif "Example") [Component Operator for Table Expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_table_exp_abexa.htm)
![Example](exa.gif "Example") [Component operator, lookup table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_using_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Reflexive Assignment](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_using_self_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Mapping Rule](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_mapping_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Handling Duplicates](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_duplicates_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Nested Mapping Rule](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_deep_mapp_abexa.htm)
![Example](exa.gif "Example") [Component Operator, Comparison with FOR Expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencorresponding_vs_for_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING for Simple Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_dyn_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING for Nested Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_struc_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_itab_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING for Tabular Components](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_deep_abexa.htm)
![Example](exa.gif "Example") [CL\_ABAP\_CORRESPONDING with Lookup Table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_corr_lookup_abexa.htm)
![Example](exa.gif "Example") [Reflexive Component Assignments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreflexive_corresponding_abexa.htm)